# ZKP_Attribute_Verification_System

./: LICENSE  README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/controllers/: keys_generator_controller.rs  mod.rs  proof_generator_controller.rs  proof_verifier_controller.rs
backend/src/models/: mod.rs  proof.rs  proof_generation.rs  proof_response.rs  proof_verification.rs  response.rs  user.rs
backend/src/routes/: age_verification.rs  citizenship.rs  college_degree.rs  keys.rs  mod.rs
backend/src/utils/: utils.rs
backend/tests/: integration_tests.rs
zkp_core/: Cargo.toml
zkp_core/src/: lib.rs  proof_system.rs
zkp_core/src/circuits/age_verification/: witness_calculator.rs
zkp_core/src/circuits/citizenship_verification/: witness_calculator.rs
zkp_core/src/circuits/college_credential_verification/: witness_calculator.rs
zkp_core/tests/: proof_system_tests.rs
