[package]
name = "zkp_core"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-std = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-bn254 = "0.4"  # Added to fix the issue
ark-groth16 = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
rand = "0.8"  # Added for `thread_rng`

[profile.release]
lto = true
codegen-units = 1
